--- a/about.html
+++ b/about.html
@@ -7,20 +7,20 @@
     <center><h1>ABOUT</h1></center>
     <center><table border="5" width="70%">
         <tr>
-            <td ><video  controls src="./inner folder/thalapathy-vijay-dance-allu-arjun-trisha-sai-pallavi-mydreameditz-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
-            <td><video controls src="./inner folder/thalapathy-vijay-dance-allu-arjun-trisha-sai-pallavi-mydreameditz-256-ytshorts.savetube.me.mp4 " width="100%"></video></td>
-            <td><video  controls src="./inner folder/thalapathy-vijay-dance-allu-arjun-trisha-sai-pallavi-mydreameditz-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td ><video  controls src="./thalapathy-vijay-dance-allu-arjun-trisha-sai-pallavi-mydreameditz-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td><video controls src="./thalapathy-vijay-dance-allu-arjun-trisha-sai-pallavi-mydreameditz-256-ytshorts.savetube.me.mp4 " width="100%"></video></td>
+            <td><video  controls src="./thalapathy-vijay-dance-allu-arjun-trisha-sai-pallavi-mydreameditz-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
         </tr>
         </tr>
         <tr>
-            <td ><video  controls src="./inner folder/why-this-kolaveri-dance-cover-by-prakhar-shrivastava-shorts-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
-            <td><video controls src="./inner folder/why-this-kolaveri-dance-cover-by-prakhar-shrivastava-shorts-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
-            <td><video  controls src="./inner folder/why-this-kolaveri-dance-cover-by-prakhar-shrivastava-shorts-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td ><video  controls src="./why-this-kolaveri-dance-cover-by-prakhar-shrivastava-shorts-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td><video controls src="./why-this-kolaveri-dance-cover-by-prakhar-shrivastava-shorts-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td><video  controls src="./why-this-kolaveri-dance-cover-by-prakhar-shrivastava-shorts-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
         </tr>
         <tr>
-           <td ><video  controls src="./inner folder/live-bollywooddance-trendingvideo-viral-viralvideo-viralshorts-foryou-youtubeshorts-vlog-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
-            <td><video controls src="./inner folder/live-bollywooddance-trendingvideo-viral-viralvideo-viralshorts-foryou-youtubeshorts-vlog-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
-            <td><video  controls src="./inner folder/live-bollywooddance-trendingvideo-viral-viralvideo-viralshorts-foryou-youtubeshorts-vlog-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+           <td ><video  controls src="./live-bollywooddance-trendingvideo-viral-viralvideo-viralshorts-foryou-youtubeshorts-vlog-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td><video controls src="./live-bollywooddance-trendingvideo-viral-viralvideo-viralshorts-foryou-youtubeshorts-vlog-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
+            <td><video  controls src="./live-bollywooddance-trendingvideo-viral-viralvideo-viralshorts-foryou-youtubeshorts-vlog-256-ytshorts.savetube.me.mp4" width="100%"></video></td>
         </tr>
         </tr>
     </table>
@@ -29,7 +29,7 @@
     <br>
     <br><br>
     <br><br><br><br>
- <img src="./inner folder/imgs/image5.png" alt="mahaan" width="300" title="mahaan">
+ <img src="./image5.png" alt="mahaan" width="300" title="mahaan">
     &nbsp;
     &nbsp;
     &nbsp;
@@ -41,7 +41,7 @@
     &nbsp;
     &nbsp;
     &nbsp;
-    <img src="./inner folder/imgs/image3.png" alt="thudaram" width="300" title="thudaram">
+    <img src="./image3.png" alt="thudaram" width="300" title="thudaram">
     &nbsp;
     &nbsp;
     &nbsp;
@@ -53,7 +53,7 @@
     &nbsp;
     &nbsp;
     &nbsp;
-    <img src="./inner folder/imgs/image2.png" alt="saripoda" width="300" title="saripoda">
+    <img src="./image2.png" alt="saripoda" width="300" title="saripoda">
     &nbsp;
     &nbsp;
     &nbsp;
@@ -65,13 +65,13 @@
     &nbsp;
     &nbsp;
     &nbsp;
-    <img src="./inner folder/imgs/image1.avif" alt="vidaamuyar" width="300" title="vidaamuyar">
+    <img src="./image1.avif" alt="vidaamuyar" width="300" title="vidaamuyar">
     &nbsp;
     &nbsp;
     &nbsp;
     &nbsp;
     <audio controls>
-        <source src="./inner folder/Hey Rangule - InstaSong.In.mp3" download="song"></audio>
+        <source src="./Hey Rangule - InstaSong.In.mp3" download="song"></audio>
         &nbsp;
     &nbsp;
     &nbsp;
@@ -83,7 +83,7 @@
     &nbsp;
     &nbsp;
         <audio controls>
-            <source src="./inner folder/Priya Mithunam.mp3" download="song">
+            <source src="./Priya Mithunam.mp3" download="song">
         </audio>
         &nbsp;
     &nbsp;
@@ -99,7 +99,7 @@
 
     &nbsp;
     <audio controls>
-        <source src="./inner folder/Aa Rojulu Malli Raavu(KoshalWorld.Com).mp3">
+        <source src="./Aa Rojulu Malli Raavu(KoshalWorld.Com).mp3">
          </audio>
          &nbsp;
     &nbsp;
@@ -112,7 +112,7 @@
     &nbsp;
     &nbsp;
      <audio controls>
-        <source src="./inner folder/Niluvaddham.mp3">
+        <source src="./Niluvaddham.mp3">
      </audio>
     &nbsp;
     &nbsp;
@@ -140,7 +140,7 @@
     &nbsp;
     &nbsp;
         
-       <a href="./inner folder/Hey Rangule - InstaSong.In.mp3" download="song"><img src="./inner folder/imgs/download.jpg" alt="" width="40"></a> 
+       <a href="./Hey Rangule - InstaSong.In.mp3" download="song"><img src="./download.jpg" alt="" width="40"></a> 
         &nbsp;
     &nbsp;
     &nbsp;
@@ -181,7 +181,7 @@
     &nbsp;
     &nbsp;
     &nbsp;
-       <a href="./inner folder/Priya Mithunam.mp3" download=" song2"><img src="./inner folder/imgs/download.jpg" width="40" alt=""></a>
+       <a href="./Priya Mithunam.mp3" download=" song2"><img src="./download.jpg" width="40" alt=""></a>
         &nbsp;
     &nbsp;
     &nbsp;
@@ -227,7 +227,7 @@
     &nbsp;
     &nbsp;
     &nbsp;
-       <a href="./inner folder/Aa Rojulu Malli Raavu(KoshalWorld.Com).mp3" download="song"><img src="./inner folder/imgs/download.jpg" alt="" width="40"></a> 
+       <a href="./Aa Rojulu Malli Raavu(KoshalWorld.Com).mp3" download="song"><img src="./download.jpg" alt="" width="40"></a> 
         &nbsp;
     &nbsp;
     &nbsp;
@@ -274,7 +274,7 @@
     &nbsp;
     &nbsp;
     &nbsp;
-       <a href="./inner folder/Niluvaddham.mp3" download="song"><img src="./inner folder/imgs/download.jpg" alt="" width="40"></a> 
+       <a href="./Niluvaddham.mp3" download="song"><img src="./download.jpg" alt="" width="40"></a> 
 
     
 </body>
