--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <a href="./about.html" target="frame1"><img src="./about or con.jpg" alt="" width="40"></a>
     <a href="./contact.html" target="frame1"><img src="./contact.jpg" alt=""width="40" ></a>
     <br><br>
-    <iframe src="./home.html" name="frame1" frameborder="2" width="800" height="800" ></iframe>
+    <iframe src="mainframe" name="frame1" frameborder="2" width="800" height="800" ></iframe>
     </center>
 </body>
 </html>
