--- a/home.html
+++ b/home.html
@@ -5,11 +5,28 @@
 </head>
 <body>
     <center><h1>HTML questions</h1></center>
-    <h3>1)DEFINE HTML?</h3>
-    <h3>2)WHAT ARE THE TAGS IN HTML?</h3>
-    <h3>3)WHAT ARE HTML ATTRIBUTES?</h3>
-    <h3>4)DEFINE TYPES OF LISTS IN HTML.</h3>
-    <h3>5)WHAT IS AN ELEMENT IN HTML?</h3>
-    
+    <b>1.What is HTML?</b><br>
+HTML (HyperText Markup Language) is the standard language used to create and structure web pages.<br>
+It defines the content and layout using tags.<br>
+It helps display text, images, links, tables, and more on browsers.<br><br>
+
+<b>2. Markup Language vs Programming Language – What is the difference?</b><br>
+A markup language (like HTML) structures and presents data but doesn't perform logic or calculations.<br>
+A programming language (like Python or JavaScript) can perform logic, loops, and computations.<br>
+In short, markup is for layout; programming is for functionality.<br><br>
+
+<b>3. What are the basic tags in HTML?</b><br>
+•	html: Root of an HTML document.<br>
+•	head: Contains meta information, title, styles.<br>
+•	body: Contains visible page content like text, images, and links.<br><br>
+
+<b>4. What is the use of the <html> tag?</b><br>
+The html tag wraps the entire HTML document.<br>
+It tells the browser that the content is in HTML format.<br>
+It is the root element of all HTML pages.<br><br>
+<b>5. What is the use of the body tag?</b><br>
+The body tag contains everything visible on the web page.<br>
+This includes text, images, links, and other content.<br>
+It is displayed in the browser window.<br>
 </body>
 </html>
